Switch from Rspec to Minitest

--- a/app/views/work_entries/index.haml
+++ b/app/views/work_entries/index.haml
@@ -10,7 +10,12 @@
 
 %hr
 
-= render partial: "new_timer" if @filters.empty?
+- if current_user.projects.any?
+  = render partial: "new_timer" if @filters.empty?
+- else
+  .alert.alert-info
+    %strong You haven't set up any projects yet.
+    Click on the Projects link at the top of the page to fix that and get started tracking your time.
 
 %table.form.nowrap.striped
   %tr
