'Stop entry' memo box is 2 lines tall; process newlines into semicolons

--- a/app/views/work_entries/index.haml
+++ b/app/views/work_entries/index.haml
@@ -45,7 +45,7 @@
           .popover-content.hidden
             = form_for entry do |f|
               %p Great! What did you get done?
-              %p= f.text_field :invoice_notes, class: "form-control", autofocus: true
+              %p= f.text_area :invoice_notes, class: "form-control", autofocus: true, rows: 2
               = hidden_field_tag :stop_timer, true
               = f.submit "Stop", class: "btn btn-danger"
 
