--- a/app/views/work_entries/edit.haml
+++ b/app/views/work_entries/edit.haml
@@ -32,10 +32,10 @@
       %td= f.text_field :goal_notes, class: "form-control"
     %tr
       %td.text-info= f.label :invoice_notes
-      %td= f.text_field :invoice_notes, class: "form-control"
+      %td= f.text_area :invoice_notes, class: "form-control", rows: 2
     %tr
       %td.text-warning= f.label :admin_notes
-      %td= f.text_field :admin_notes, class: "form-control"
+      %td= f.text_area :admin_notes, class: "form-control", rows: 2
     %tr
       %td
       %td= f.submit "Save", class: "btn btn-success"
