--- a/app/views/work_entries/index.haml
+++ b/app/views/work_entries/index.haml
@@ -17,7 +17,7 @@
     %strong You haven't set up any projects yet.
     Click on the Projects link at the top of the page to fix that and get started tracking your time.
 
-%table.form.nowrap.striped
+%table.table.table-striped.nowrap{style: "width: 100%;"}
   %tr
     %th Date
     %th Project
