--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,44 +1,51 @@
 
+// Layout
+
 #main-container {
   max-width: 800px;
-  padding-bottom: 40px;
-}
+  margin-left: auto; 
+  margin-right: auto;
+  padding-bottom: 50px; }
+.dropdown-toggle { cursor: pointer; }
+.centered-800 { max-width: 800px; margin-left: auto; margin-right: auto; }
+.centered-600 { max-width: 600px; margin-left: auto; margin-right: auto; }
+.row-padded {
+  padding-top: 5px;
+  padding-bottom: 5px; }
+.row-padded-top { padding-top: 5px; }
+.row-padded-bottom { padding-bottom: 5px; }
 
+// Utilities
+
+// TODO: change to just .hidden; remove unwanted Bootstrap side-effects
+.js-hidden { display: none; }
+.show-if-js { display: none; }
+.float-left  { float: left; }
+.float-right { float: right; }
+.clear-float  { clear: both; }
+.nowrap { white-space: nowrap; }
+.em { font-style: italic; }
+.strong { font-weight: bold; }
+
+.def { cursor: help; }
+.tooltip { white-space: normal; }
+.max-400 { max-width: 400px; }
+
+// TODO: Get rid of this, replace with Bootstrap grids
 table.form {
   &.wide { min-width: 400px; }
-
-  th, td { padding: 5px; }
-}
+  th, td { padding: 5px; } }
 
 table.striped {
-  td {
-    border-top: 1px solid #eee;
-  }
+  td { border-top: 1px solid #eee; } }
 
-  // Nah, looks too busy
-  // tr:nth-of-type(even) {
-  //   background-color: #f9f9f9;
-  // }
-}
-
+// TODO: Remove these
 .center { text-align: center; }
-
 .small  { width: 100px; }
 .medium { width: 200px; }
-
 .inline { display: inline-block; }
 
 .row-highlight { background-color: #f6f6f6; }
-
-.dropdown-toggle { cursor: pointer; }
-
-// Utility
-
-.def { cursor: help; }
-
-.js-hidden { display: none; }
-
-.nowrap { white-space: nowrap; }
 
 .force_red { color: #a94442 !important; }
 
@@ -48,12 +55,6 @@ table.striped {
   background-image: image-url("loading.gif");
 }
 
-.tooltip { white-space: normal; }
-
-.max-400 { max-width: 400px; }
-
-
-
 .feature {
   font-size: 110%;
   padding: 10px;
@@ -62,10 +63,6 @@ table.striped {
   border: 1px solid #eee;
   border-radius: 5px;
 }
-
-
-
-
 
 // for Devise forms
 #error_explanation {
