--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -3,7 +3,7 @@
 
 #main-container {
   max-width: 800px;
-  margin-left: auto; 
+  margin-left: auto;
   margin-right: auto;
   padding-bottom: 50px; }
 .dropdown-toggle { cursor: pointer; }
@@ -45,7 +45,7 @@ table.striped {
 .medium { width: 200px; }
 .inline { display: inline-block; }
 
-.row-highlight { background-color: #f6f6f6; }
+.row-highlight { background-color: #f6f6f6 !important; }
 
 .force_red { color: #a94442 !important; }
 
