Update hard-coded invoicing address

--- a/app/views/invoices/show.haml
+++ b/app/views/invoices/show.haml
@@ -19,8 +19,9 @@
         %p{style: "white-space: nowrap;"}
           <em>From</em> <br>
           <strong>Topher Hunt</strong><br>
-          15 Mary Jane Ln<br>
-          Florence, MA 01062<br>
+          351 Pleasant St.<br>
+          Suite B #109<br>
+          Northampton, MA 01060<br>
           (802) 236 6073
 
       %br{style: "clear: both;"}
