--- a/app/views/work_entries/_totals.haml
+++ b/app/views/work_entries/_totals.haml
@@ -1,29 +1,76 @@
 
-.well{style: "padding: 15px; padding-top: 5px;"}
-  .row
+- if @filters.any?
+  %table{style: "float: right;"}
+    %tr
+      %th Filter totals
+      %th.text-right Total
+      %th.text-right Billable
+    %tr
+      %td
+      %td= @totals[:total].round(1)
+      %td= @totals[:billable].round(1)
 
-    - if @filters.any?
-      .col-sm-12
-        %h4 Totals for this filter:
-        %ul{style: "margin-bottom: 0px; padding-left: 20px;"}
-          %li.text-info
-            <strong>#{@hrs_total.round(2)}</strong> hrs total
-          %li.text-info
-            <strong>#{@hrs_billable.round(2)}</strong> hrs billable
+- else
 
-    - else
+  %table.totals-table
+    %tr
+      %th Totals today
+      %th.text-right Total
+      %th.text-right Billable
+    %tr
+      %td All projects
+      %td.text-right
+        = @totals[:day][:all][:total].round(1)
+      %td.text-right
+        = @totals[:day][:all][:billable].round(1)
+    - @totals[:day][:projects].each do |data|
+      %tr
+        %td.project-name= data[:project_name]
+        %td.text-right= data[:total]
+        %td.text-right= data[:billable]
+    - if @totals[:day][:all][:total] == 0
+      %tr
+        %td.small.text-info{colspan: 3} Good morning! Ready for a productive day?
+    - if @totals[:day][:all][:total] >= 9
+      %tr
+        %td.small.text-success{colspan: 3} Wow, you've had an amazing day! Why don't you reward yourself?
 
-      .col-sm-6
-        %h4 Today:
-        %ul{style: "margin-bottom: 0px; padding-left: 20px;"}
-          %li{class: @hrs_total_today > 9 ? "text-success" : ""}
-            <strong>#{@hrs_total_today.round(2)}</strong> hrs total
-          %li{class: @hrs_billable_today > 7 ? "text-success" : ""}
-            <strong>#{@hrs_billable_today.round(2)}</strong> hrs billable
-      .col-sm-6
-        %h4 This week:
-        %ul{style: "margin-bottom: 0px; padding-left: 20px;"}
-          %li{class: @hrs_total_this_week > 45 ? "text-success" : ""}
-            <strong>#{@hrs_total_this_week.round(2)}</strong> hrs total
-          %li{class: @hrs_billable_this_week > 35 ? "text-success" : ""}
-            <strong>#{@hrs_billable_this_week.round(2)}</strong> hrs billable
+  %table.totals-table
+    %tr
+      %th Totals this week
+      %th.text-right Total
+      %th.text-right Billable
+    %tr
+      %td All projects
+      %td.text-right= @totals[:week][:all][:total].round(1)
+      %td.text-right= @totals[:week][:all][:billable].round(1)
+    - @totals[:week][:projects].each do |data|
+      %tr
+        %td.project-name= data[:project_name]
+        %td.text-right= data[:total]
+        %td.text-right= data[:billable]
+    - if @totals[:week][:all][:total] == 0
+      %tr
+        %td.small.text-info{colspan: 3} It's the start of an amazing new week! Have you done your #{link_to "weekly review", "http://gettingthingsdone.com/wp-content/uploads/2014/10/Weekly_Review_Checklist.pdf", target: "_blank", style: "text-decoration: underline;"} yet?
+    - if @totals[:week][:all][:total] >= 45
+      %tr
+        %td.small.text-success{colspan: 3} Really awesome job this week!
+
+  %table.totals-table
+    %tr
+      %th Targets this week
+      %th.text-right Total
+      %th.text-right Targeted
+    - @totals[:targets][:projects].each do |data|
+      %tr{class: success_or_danger(data[:actual] >= data[:expected]), colspan: 2}
+        %td.project-name= data[:project_name]
+        %td.text-right= data[:actual].round(1)
+        %td.text-right= data[:expected].round
+    - if @totals[:week][:projects].count == 0
+      %tr
+        %td.small.text-info{colspan: 3} Now you can track weekly targets per project. Edit a project and enter a number for "Min hours per week" to get started.
+    - elsif @totals[:targets][:projects].all? { |p| p[:actual] >= p[:expected] }
+      %tr
+        %td.small.text-success{colspan: 3} OMG, you've met all of your targets for this week. How do you feel?
+
+.clear-float
