--- a/app/views/work_entries/edit.haml
+++ b/app/views/work_entries/edit.haml
@@ -8,7 +8,7 @@
   %table.form
     %tr
       %td= f.label :project_id, "Project"
-      %td= f.select :project_id, project_options_for_select(selected: @entry.project_id), {}, class: "form-control"
+      %td= f.select :project_id, project_options_for_select(exclude_inactive: true, selected: @entry.project_id), {}, class: "form-control"
     %tr
       %td= f.label :date
       %td= f.date_field :date, class: "form-control"
@@ -32,10 +32,10 @@
       %td= f.text_field :goal_notes, class: "form-control"
     %tr
       %td.text-info= f.label :invoice_notes
-      %td= f.text_area :invoice_notes, class: "form-control", rows: 2
+      %td= f.text_field :invoice_notes, class: "form-control"
     %tr
       %td.text-warning= f.label :admin_notes
-      %td= f.text_area :admin_notes, class: "form-control", rows: 2
+      %td= f.text_field :admin_notes, class: "form-control"
     %tr
       %td
       %td= f.submit "Save", class: "btn btn-success"
