--- a/app/views/work_entries/_totals.haml
+++ b/app/views/work_entries/_totals.haml
@@ -1,30 +1,28 @@
 
 - if @filters.any?
-  %table{style: "float: right;"}
+  %table.table{style: "float: right;"}
     %tr
       %th Filter totals
-      %th.text-right Total
-      %th.text-right Billable
+      %td.text-right Total
+      %td.text-right Billable
     %tr
       %td
-      %td= @totals[:total].round(1)
-      %td= @totals[:billable].round(1)
+      %th= @totals[:total].round(1)
+      %th= @totals[:billable].round(1)
 
 - else
 
   %table.totals-table
     %tr
       %th Totals today
-      %th.text-right Total
-      %th.text-right Billable
+      %td.text-right Total
+      %td.text-right Billable
     %tr
       %td All projects
-      %td.text-right
-        = @totals[:day][:all][:total].round(1)
-      %td.text-right
-        = @totals[:day][:all][:billable].round(1)
+      %th.text-right= @totals[:day][:all][:total].round(1)
+      %th.text-right= @totals[:day][:all][:billable].round(1)
     - @totals[:day][:projects].each do |data|
-      %tr
+      %tr.text-muted
         %td.project-name= data[:project_name]
         %td.text-right= data[:total].round(1)
         %td.text-right= data[:billable].round(1)
@@ -38,14 +36,14 @@
   %table.totals-table
     %tr
       %th Totals this week
-      %th.text-right Total
-      %th.text-right Billable
+      %td.text-right Total
+      %td.text-right Billable
     %tr
       %td All projects
-      %td.text-right= @totals[:week][:all][:total].round(1)
-      %td.text-right= @totals[:week][:all][:billable].round(1)
+      %th.text-right= @totals[:week][:all][:total].round(1)
+      %th.text-right= @totals[:week][:all][:billable].round(1)
     - @totals[:week][:projects].each do |data|
-      %tr
+      %tr.text-muted
         %td.project-name= data[:project_name]
         %td.text-right= data[:total].round(1)
         %td.text-right= data[:billable].round(1)
@@ -59,12 +57,12 @@
   %table.totals-table
     %tr
       %th Targets this week
-      %th.text-right Total
-      %th.text-right Targeted
+      %td.text-right Total
+      %td.text-right Target
     - @totals[:targets][:projects].each do |data|
       %tr{class: success_or_danger(data[:actual] >= data[:expected]), colspan: 2}
         %td.project-name= data[:project_name]
-        %td.text-right= data[:actual].round(1)
+        %th.text-right= data[:actual].round(1)
         %td.text-right= data[:expected].round
     - if @totals[:targets][:projects].count == 0
       %tr
