--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,12 +1,9 @@
 
 // Layout
 
-#main-container {
-  max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 50px; }
+#main-container { padding-bottom: 50px; }
 .dropdown-toggle { cursor: pointer; }
+.centered-1000 { max-width: 1000px; margin-left: auto; margin-right: auto; }
 .centered-800 { max-width: 800px; margin-left: auto; margin-right: auto; }
 .centered-600 { max-width: 600px; margin-left: auto; margin-right: auto; }
 .row-padded {
