Rename admin notes to private notes

--- a/app/views/home/about.haml
+++ b/app/views/home/about.haml
@@ -37,7 +37,7 @@
   %li <strong>Is billable?</strong> - will this work item be billed to the client? This defaults to <strong>true</strong> if you have an hourly rate set for this client.
   %li <strong>Is billed?</strong> - if billable, <em>has</em> this item been billed to the client?
   %li <strong>Invoice notes</strong> - notes on what you accomplished, etc. These will be visible on invoices.
-  %li <strong>Admin notes</strong> - any notes you'd like to make to yourself that should <em>not</em> be visible to the client.
+  %li <strong>Private notes</strong> - any notes you'd like to make to yourself that should <em>not</em> be visible to the client.
 
 %p You can also click the <span class="btn btn-info btn-xs">Edit</span> button to create a new entry and jump right into changing its details; this is useful if you want to quickly create entries for some time you've already worked.
 
