--- a/app/views/invoices/_preview.haml
+++ b/app/views/invoices/_preview.haml
@@ -11,7 +11,7 @@
       %th Date
       %th Project
       %th.text-info Activity
-      %th.text-warning.nowrap Admin notes
+      %th.text-warning.nowrap Private notes
       %th Rate
       %th.nowrap Hours
       %th Bill
@@ -47,7 +47,7 @@
         %th Date
         %th Project
         %th.text-info Activity
-        %th.text-warning.nowrap Admin notes
+        %th.text-warning.nowrap Private notes
         %th.nowrap # hours
 
     - @unbillable.each do |entry|
@@ -74,7 +74,7 @@
         %th Date
         %th Project
         %th.text-info Activity
-        %th.text-warning.nowrap Admin notes
+        %th.text-warning.nowrap Private notes
         %th.nowrap # hours
         %th Billable?
         %th Invoice
@@ -109,7 +109,7 @@
         %th Date
         %th Project
         %th.text-info Activity
-        %th.text-warning.nowrap Admin notes
+        %th.text-warning.nowrap Private notes
         %th.nowrap # hours
         %th Billable?
 
