--- a/app/views/work_entries/edit.haml
+++ b/app/views/work_entries/edit.haml
@@ -34,7 +34,7 @@
       %td.text-info= f.label :invoice_notes
       %td= f.text_field :invoice_notes, class: "form-control"
     %tr
-      %td.text-warning= f.label :admin_notes
+      %td.text-warning= f.label :admin_notes, "Private notes"
       %td= f.text_field :admin_notes, class: "form-control"
     %tr
       %td
