Make timesheet max width wider; better use of table space

--- a/app/assets/stylesheets/work_entries_list.scss
+++ b/app/assets/stylesheets/work_entries_list.scss
@@ -10,7 +10,16 @@
 
 table .project-name {
   max-height: 1.5em;
-  overflow: hidden;
+}
+
+table#timesheet {
+  td.project-td {
+    overflow: hidden;
+
+    .project-name {
+      width: 1000%;
+    }
+  }
 }
 
 .totals-table {
